[project]
name = "procose"
version = "0.1.0"
description = "Syntactic sugar for python subprocesses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansi2html>=1.9.2",
    "psutil>=7.0.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/procose", "src/ht_util"]

[project.scripts]
procose = "procose.cli:main"
testapp = "procose.testapp:main"
controlled_test_app = "procose.controlled_test_app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "structlog>=25.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0"
]
