[project]
name = "htutil"
version = "0.1.0"
description = "A python wrapper around ht (a headless terminal utility)"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ansi2html>=1.9.2",
    "typer>=0.15.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ht_util"]

[project.scripts]
htutil = "ht_util.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "pytest>=7.0,<8.0",
    "structlog>=21.0,<22.0",
]
